fix input scale on mobile

--- a/index.css
+++ b/index.css
@@ -92,5 +92,6 @@ button {
 
 	.dimension-input {
 		width: 100%;
+		font-size: 16px;
 	}
 }
